tests/ui/basic/divide_by_zero.rs
use metamatch::eval;

fn main() {
    eval! {
        1 / 0
    };
}
